--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,17 @@
     <string name="donut_order_message">You ordered a donut.</string>
     <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
     <string name="froyo_order_message">You ordered a FroYo.</string>
+    <string name="name_label_text">Name</string>
+    <string name="enter_name_hint">Enter your name here</string>
+    <string name="address_label">Address</string>
+    <string name="address_text_hint">Enter your address here</string>
+    <string name="phone_label_text">Phone</string>
+    <string name="phone_label">Enter phone number</string>
+    <string name="enter_phone_hint">Enter phone here</string>
+    <string name="note_label_text">Note</string>
+    <string name="enter_note_hint">Leave a note here</string>
+    <string name="choose_delivery_method">Choose a Delivery Method</string>
+    <string name="same_day_messenger_service">Same day messenger service</string>
+    <string name="next_day_ground_delivery">Next day ground delivery</string>
+    <string name="pick_up">Pick up</string>
 </resources>
